[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "etsy"
version = "0.1"
authors = [
  { name="Maaike Van Roy", email="maaike.vanroy@kuleuven.be" },
]
description = "Soccer Event - Tracking Synchronization"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "pandas",
    "pandera",
    "tqdm",
]

[project.urls]
"Homepage" = "https://github.com/ML-KULeuven/ETSY"